[gd_scene load_steps=61 format=3 uid="uid://8jpav21nqp8c"]

[ext_resource type="Script" path="res://scripts/EnemyStats.gd" id="1_6iww8"]
[ext_resource type="Script" path="res://prefab/enemys/EnemyBee.gd" id="1_tomjn"]
[ext_resource type="PackedScene" uid="uid://c4qwbfsr4fe74" path="res://prefab/effects/HitEffect.tscn" id="2_8w0xq"]
[ext_resource type="PackedScene" uid="uid://doa5hxcckh64o" path="res://prefab/enemys/EnemyHUD.tscn" id="2_a1qd3"]
[ext_resource type="PackedScene" uid="uid://ckumpl45hmii" path="res://prefab/UI/ValueDisplay.tscn" id="3_hd0y3"]
[ext_resource type="PackedScene" uid="uid://cblcbsx1gpy2q" path="res://prefab/effects/DeathEffect.tscn" id="3_xbxro"]
[ext_resource type="Texture2D" uid="uid://buifk6a7x00p2" path="res://assets/Enemies/bee.png" id="4_brymv"]
[ext_resource type="Script" path="res://prefab/enemys/EnemyWeapon.gd" id="4_ee5wk"]
[ext_resource type="PackedScene" uid="uid://bpr5kb8nmfivl" path="res://prefab/audio/EnemyHitSound.tscn" id="4_ir276"]
[ext_resource type="PackedScene" uid="uid://kbo1bay3i1ps" path="res://prefab/utils/PlayerDetector.tscn" id="5_gf8iu"]
[ext_resource type="PackedScene" uid="uid://uqcsi836bkf" path="res://prefab/audio/EnemyDeathSound.tscn" id="5_k1cdl"]
[ext_resource type="Material" uid="uid://b47wfikaj16y1" path="res://assets/Materials/LPCHealEffectMaterial.tres" id="6_l6ema"]
[ext_resource type="PackedScene" uid="uid://ebdq15holk57" path="res://prefab/utils/Softcollision.tscn" id="6_ql5m3"]
[ext_resource type="Material" uid="uid://fqy3iw8adqtq" path="res://assets/Materials/LPCDeadEffectMaterial.tres" id="7_0u5wg"]
[ext_resource type="PackedScene" uid="uid://bk15h3dxda4v0" path="res://prefab/utils/SoundController.tscn" id="7_2npde"]
[ext_resource type="PackedScene" uid="uid://cg78h4dp2l02s" path="res://prefab/utils/Hitbox.tscn" id="8_jhnk8"]
[ext_resource type="PackedScene" uid="uid://cqwoenanbmyd5" path="res://prefab/utils/RewardController.tscn" id="9_17spo"]
[ext_resource type="PackedScene" uid="uid://b347lo6c415bh" path="res://prefab/utils/WanderController.tscn" id="10_vemwy"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_dhe6b"]
radius = 4.0
height = 14.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_f71e8"]

[sub_resource type="CircleShape2D" id="CircleShape2D_yuel6"]
radius = 107.005

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_6e4gd"]
radius = 3.62556
height = 13.1563

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_4eebc"]

[sub_resource type="Animation" id="Animation_5e3u8"]
resource_name = "idle_down"
length = 0.3
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Body:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [Vector2i(0, 2), Vector2i(1, 2), Vector2i(2, 2)]
}

[sub_resource type="Animation" id="Animation_eds42"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Body:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(0, 2)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("WeaponHolder:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.5708]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("WeaponHolder/EnemyWeapon/CollisionShape2D2:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_tp74h"]
resource_name = "idle_right"
length = 0.3
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Body:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [Vector2i(0, 3), Vector2i(1, 3), Vector2i(2, 3)]
}

[sub_resource type="Animation" id="Animation_kpp2f"]
resource_name = "idle_up"
length = 0.3
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Body:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [Vector2i(0, 0), Vector2i(1, 0), Vector2i(2, 0)]
}

[sub_resource type="Animation" id="Animation_hrnjo"]
resource_name = "idle_left"
length = 0.3
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Body:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [Vector2i(0, 1), Vector2i(1, 1), Vector2i(2, 1)]
}

[sub_resource type="Animation" id="Animation_6wdak"]
resource_name = "attack_left"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Body:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2i(2, 1), Vector2i(3, 1), Vector2i(4, 1), Vector2i(5, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("WeaponHolder:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [3.14159, 3.14159]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("WeaponHolder/EnemyWeapon/CollisionShape2D2:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, false, true]
}
tracks/3/type = "method"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.4),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"_attack_animation_finished"
}]
}

[sub_resource type="Animation" id="Animation_p8qqo"]
resource_name = "attack_right"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Body:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2i(2, 3), Vector2i(3, 3), Vector2i(4, 3), Vector2i(5, 3)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("WeaponHolder:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("WeaponHolder/EnemyWeapon/CollisionShape2D2:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, false, true]
}
tracks/3/type = "method"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.4),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"_attack_animation_finished"
}]
}

[sub_resource type="Animation" id="Animation_7i7uq"]
resource_name = "attack_up"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Body:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2i(2, 0), Vector2i(3, 0), Vector2i(4, 0), Vector2i(5, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("WeaponHolder:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [-1.5708, -1.5708]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("WeaponHolder/EnemyWeapon/CollisionShape2D2:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, false, true]
}
tracks/3/type = "method"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.4),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"_attack_animation_finished"
}]
}

[sub_resource type="Animation" id="Animation_wk1b2"]
resource_name = "attack_down"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Body:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2i(2, 2), Vector2i(3, 2), Vector2i(4, 2), Vector2i(5, 2)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("WeaponHolder:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [1.5708, 1.5708]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("WeaponHolder/EnemyWeapon/CollisionShape2D2:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, false, true]
}
tracks/3/type = "method"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.4),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"_attack_animation_finished"
}]
}

[sub_resource type="Animation" id="Animation_otcbl"]
resource_name = "move_down"
length = 0.3
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Body:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [Vector2i(0, 2), Vector2i(1, 2), Vector2i(2, 2)]
}

[sub_resource type="Animation" id="Animation_hfri4"]
resource_name = "move_up"
length = 0.3
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Body:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [Vector2i(0, 0), Vector2i(1, 0), Vector2i(2, 0)]
}

[sub_resource type="Animation" id="Animation_dieai"]
resource_name = "move_right"
length = 0.3
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Body:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [Vector2i(0, 3), Vector2i(1, 3), Vector2i(2, 3)]
}

[sub_resource type="Animation" id="Animation_susvv"]
resource_name = "move_left"
length = 0.3
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Body:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [Vector2i(0, 1), Vector2i(1, 1), Vector2i(2, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_esw16"]
_data = {
"RESET": SubResource("Animation_eds42"),
"attack_down": SubResource("Animation_wk1b2"),
"attack_left": SubResource("Animation_6wdak"),
"attack_right": SubResource("Animation_p8qqo"),
"attack_up": SubResource("Animation_7i7uq"),
"idle_down": SubResource("Animation_5e3u8"),
"idle_left": SubResource("Animation_hrnjo"),
"idle_right": SubResource("Animation_tp74h"),
"idle_up": SubResource("Animation_kpp2f"),
"move_down": SubResource("Animation_otcbl"),
"move_left": SubResource("Animation_susvv"),
"move_right": SubResource("Animation_dieai"),
"move_up": SubResource("Animation_hfri4")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_3cnir"]
animation = &"attack_down"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_37hc4"]
animation = &"attack_up"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_n155p"]
animation = &"attack_right"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_nlbck"]
animation = &"attack_left"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_o6js4"]
blend_point_0/node = SubResource("AnimationNodeAnimation_3cnir")
blend_point_0/pos = Vector2(0, 1)
blend_point_1/node = SubResource("AnimationNodeAnimation_37hc4")
blend_point_1/pos = Vector2(0, -1)
blend_point_2/node = SubResource("AnimationNodeAnimation_n155p")
blend_point_2/pos = Vector2(1, 0)
blend_point_3/node = SubResource("AnimationNodeAnimation_nlbck")
blend_point_3/pos = Vector2(-1, 0)
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_coa5u"]
animation = &"idle_down"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_o8chq"]
animation = &"idle_up"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_sivhk"]
animation = &"idle_right"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_bh0rh"]
animation = &"idle_left"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_h1gv7"]
blend_point_0/node = SubResource("AnimationNodeAnimation_coa5u")
blend_point_0/pos = Vector2(0, 1)
blend_point_1/node = SubResource("AnimationNodeAnimation_o8chq")
blend_point_1/pos = Vector2(0, -1)
blend_point_2/node = SubResource("AnimationNodeAnimation_sivhk")
blend_point_2/pos = Vector2(1, 0)
blend_point_3/node = SubResource("AnimationNodeAnimation_bh0rh")
blend_point_3/pos = Vector2(-1, 0)
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_w41n6"]
animation = &"move_down"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_lmu76"]
animation = &"move_up"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_3betj"]
animation = &"move_right"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_4anuw"]
animation = &"move_left"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_rbase"]
blend_point_0/node = SubResource("AnimationNodeAnimation_w41n6")
blend_point_0/pos = Vector2(0, 1)
blend_point_1/node = SubResource("AnimationNodeAnimation_lmu76")
blend_point_1/pos = Vector2(0, -1)
blend_point_2/node = SubResource("AnimationNodeAnimation_3betj")
blend_point_2/pos = Vector2(1, 0)
blend_point_3/node = SubResource("AnimationNodeAnimation_4anuw")
blend_point_3/pos = Vector2(-1, 0)
blend_mode = 1

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_dkk4r"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_5ss2c"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_m3hfp"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_xb8nw"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_hw5uk"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_5kqgi"]

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_jweqe"]
states/Attack/node = SubResource("AnimationNodeBlendSpace2D_o6js4")
states/Attack/position = Vector2(608, 96)
states/Idle/node = SubResource("AnimationNodeBlendSpace2D_h1gv7")
states/Idle/position = Vector2(385, 85)
states/Move/node = SubResource("AnimationNodeBlendSpace2D_rbase")
states/Move/position = Vector2(438, 176)
transitions = ["Idle", "Move", SubResource("AnimationNodeStateMachineTransition_dkk4r"), "Move", "Idle", SubResource("AnimationNodeStateMachineTransition_5ss2c"), "Idle", "Attack", SubResource("AnimationNodeStateMachineTransition_m3hfp"), "Attack", "Idle", SubResource("AnimationNodeStateMachineTransition_xb8nw"), "Move", "Attack", SubResource("AnimationNodeStateMachineTransition_hw5uk"), "Attack", "Move", SubResource("AnimationNodeStateMachineTransition_5kqgi")]

[sub_resource type="AnimationNodeStateMachinePlayback" id="AnimationNodeStateMachinePlayback_olgj4"]

[node name="EnemyBee" type="CharacterBody2D"]
motion_mode = 1
script = ExtResource("1_tomjn")
item_name = "Biene"
hit_scene = ExtResource("2_8w0xq")
death_scene = ExtResource("3_xbxro")
hit_sound_scene = ExtResource("4_ir276")
death_sound_scene = ExtResource("5_k1cdl")
heal_material = ExtResource("6_l6ema")
dmg_material = ExtResource("7_0u5wg")

[node name="EnemyStats" type="Node" parent="."]
script = ExtResource("1_6iww8")
max_health = 15
damage = 5
MAX_SPEED = 35
ACCELERATION = 300
FRICTION = 200
WANDER_SPEED = 20
WANDER_TARGET_RANGE = 64
reward_exp = 25

[node name="EnemyHUD" parent="." instance=ExtResource("2_a1qd3")]
offset_left = -29.0
offset_top = -46.0
offset_right = -29.0
offset_bottom = -46.0
enemy_stats_path = NodePath("../EnemyStats")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource("CapsuleShape2D_dhe6b")

[node name="Body" type="Sprite2D" parent="."]
texture = ExtResource("4_brymv")
offset = Vector2(0, -13)
hframes = 6
vframes = 4
frame = 12

[node name="Shadow" type="Sprite2D" parent="."]

[node name="ValueDisplay" parent="." instance=ExtResource("3_hd0y3")]
position = Vector2(0, -36)

[node name="WeaponHolder" type="Marker2D" parent="."]
rotation = 1.5708

[node name="EnemyWeapon" type="Area2D" parent="WeaponHolder" groups=["enemyWeapon"]]
position = Vector2(24, 0)
collision_layer = 8
collision_mask = 8
script = ExtResource("4_ee5wk")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="WeaponHolder/EnemyWeapon"]
position = Vector2(-4, 8.74228e-07)
shape = SubResource("CapsuleShape2D_f71e8")
disabled = true

[node name="AttackTimer" type="Timer" parent="WeaponHolder/EnemyWeapon"]
wait_time = 4.0
one_shot = true

[node name="PlayerDetector" parent="." instance=ExtResource("5_gf8iu")]

[node name="CollisionShape2D" parent="PlayerDetector" index="0"]
position = Vector2(0, -7)
shape = SubResource("CircleShape2D_yuel6")

[node name="SoftCollision" parent="." instance=ExtResource("6_ql5m3")]

[node name="CollisionShape2D" parent="SoftCollision" index="0"]
rotation = 1.5708
shape = SubResource("CapsuleShape2D_6e4gd")

[node name="SoundController" parent="." instance=ExtResource("7_2npde")]

[node name="Hitbox" parent="." instance=ExtResource("8_jhnk8")]

[node name="CollisionShape2D" parent="Hitbox" index="0"]
position = Vector2(0, -14)
shape = SubResource("CapsuleShape2D_4eebc")

[node name="Timer" type="Timer" parent="Hitbox"]
one_shot = true

[node name="RewardController" parent="." instance=ExtResource("9_17spo")]
reward_chance = 10
reward_gold = 30

[node name="WanderController" parent="." instance=ExtResource("10_vemwy")]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_esw16")
}

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource("AnimationNodeStateMachine_jweqe")
anim_player = NodePath("../AnimationPlayer")
parameters/playback = SubResource("AnimationNodeStateMachinePlayback_olgj4")
parameters/Attack/blend_position = Vector2(0, 0)
parameters/Idle/blend_position = Vector2(0, 0)
parameters/Move/blend_position = Vector2(0, 0)

[editable path="PlayerDetector"]
[editable path="SoftCollision"]
[editable path="Hitbox"]
[editable path="WanderController"]
